[BUG] fix records cell value wrapping

--- a/src/components/LastRecordsTable/index.scss
+++ b/src/components/LastRecordsTable/index.scss
@@ -11,5 +11,9 @@
     .action-cell {
       padding: 6px;
     }
+
+    .score-cell {
+      white-space: nowrap;
+    }
   }
 }
